Increased the line height to prevent clipping

--- a/src/ui/RealmBrowser/RealmBrowser.scss
+++ b/src/ui/RealmBrowser/RealmBrowser.scss
@@ -175,7 +175,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      line-height: 1rem;
+      line-height: 1.2rem;
       overflow: hidden;
       text-overflow: ellipsis;
     }
